fix(accordion): fixes top and bottom padding for title wrap

--- a/packages/ui-core/src/components/Accordion/Accordion.less
+++ b/packages/ui-core/src/components/Accordion/Accordion.less
@@ -18,7 +18,7 @@
     &__title-wrap {
         position: relative;
 
-        padding: 20px 44px 20px 16px;
+        padding: 24px 44px 24px 16px;
         border-radius: 12px;
 
         cursor: pointer;
@@ -26,7 +26,7 @@
         transition: background-color @defaultTransitionTiming;
 
         @media @mobileBU {
-            padding: 20px 56px 20px 24px;
+            padding: 24px 56px 24px 24px;
         }
     }
 
